--- a/app/js/templates/squareTemplate.hbs
+++ b/app/js/templates/squareTemplate.hbs
@@ -1,1 +1,1 @@
-<td><div class="{{class}}" id="square:{{x}},{{y}}">{{bonus}}</div></td>
+<td><div class="{{class}}" id="square:{{x}},{{y}}">{{{bonus}}}</div></td>
