remove letter data from tray, added buttons

--- a/app/js/templates/letterTemplate.hbs
+++ b/app/js/templates/letterTemplate.hbs
@@ -1,4 +1,4 @@
-<div class = "letter">
+<div class = "letter" id = "{{id}}">
   <div class = "letterCharacter">{{#unless character}}&nbsp;{{else}}{{character}}{{/unless}}</div>
   <div class = "letterScore">{{#if score}}{{score}}{{/if}}</div>
 </div>
