--- a/app/js/templates/squareTemplate.hbs
+++ b/app/js/templates/squareTemplate.hbs
@@ -1,5 +1,1 @@
-<td>
-  <div class="{{class}}" id="square:{{x}},{{y}}">
-    {{{bonus}}}
-  </div>
-</td>
+<td class="{{class}}" id="square:{{x}},{{y}}">{{{bonus}}}</td>
