add turn-taking logic, structure for two-player but not done yet

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -152,6 +152,7 @@ td
 .tray
 {
   //background-color: white;
+  display: none;
   border-style: solid;
   border-color: rgb(128, 128, 128);
   border-width: 2px;
