add refill to turn logic, add end of game to game message display

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -37,6 +37,9 @@ body
   line-height: 1;
   cursor: default;
   user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 #board
