change all x-y to y-x, add donut board

--- a/app/js/templates/squareTemplate.hbs
+++ b/app/js/templates/squareTemplate.hbs
@@ -1,1 +1,1 @@
-<td class="{{class}} {{#if letter}}has-letter{{/if}}" id="square-{{x}}-{{y}}">{{{bonus}}}<br>x{{x}} y{{y}}</td>
+<td class="{{class}} {{#if letter}}has-letter{{/if}}" id="square-{{y}}-{{x}}">{{{bonus}}}</td>
