scores non-cumulative, checks for straight lines

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -159,11 +159,8 @@ td
 
 .tray
 {
-  //background-color: white;
   display: none;
-  border-style: solid;
-  border-color: rgb(128, 128, 128);
-  border-width: 2px;
+  border: solid 2px rgb(128, 128, 128);
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
@@ -207,4 +204,16 @@ td
   width: 60px;
   height: 60px;
   z-index: 1;
+}
+
+#score
+{
+  border: solid 1px grey;
+  border-radius: 5px;
+  font-family: arial;
+  font-size: 14pt;
+  color: blue;
+  padding: 10px;
+  margin: 10px;
+  line-height: 1.5;
 }
