--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -213,10 +213,29 @@ td
   height: 60px;
   z-index: 1;
 }
-#letter-select
+
+#overlay
 {
-  float: left;
-  margin: 0 7px 20px 0;
-  background-color: rgb(100, 255, 100);
-  z-index: 30;
+  display: none;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width:100%;
+  height:100%;
+  text-align:center;
+  background-color: rgba(0,0,0,.25);
+  z-index: 1000;
+}
+#overlay div
+{
+  width: 300px;
+  margin: 100px auto;
+  background-color: #fff;
+  border: 1px solid #000;
+  padding: 15px;
+  text-align: center;
+}
+.letter-button
+{
+  width: 25px;
 }
