--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,116 +1,7 @@
-html, body, div, span, applet, object, iframe,h1,
-h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym,
-address, big, cite, code,del, dfn, em, img, ins, kbd, q, s,
-samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl,
-dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption,
-tbody, tfoot, thead, tr, th, td,article, aside, canvas, details,
-embed, figure, figcaption, footer, header, hgroup, menu, nav,
-output, ruby, section, summary,time, mark, audio, video
-{
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align:
-  baseline;
-}
-article, aside, details, figcaption, figureF,
-footer, header, hgroup, menu, nav, section
-{
-  display: block;
-}
-ol, ul
-{
-  list-style: none;
-}
-table
-{
-  border-collapse: collapse;
-  border-spacing: 0;
-
-}
-/*the above is CSS reset junk*/
-
-body
-{
-  line-height: 1;
-  cursor: default;
-  user-select: none;
-}
-
-#board
-{
-  background-color: rgb(0, 0, 0);
-  border-style: solid;
-  border-width: 2px;
-  border-color: black;
-  width: 850px;
-  height: 450px;
-  overflow: scroll;
-}
-td
-{
-  width:  42px;
-  height: 42px;
-}
-.square
-{
-  color: black;
-  width:  42px;
-  height: 42px;
-  font-family: arial;
-  font-weight: bold;
-  font-size: 12pt;
-  text-align: center;
-  border-style: solid;
-  border-width: 1px;
-  border-color: gray;
-  background-color: rgb(96, 96, 96);
-}
-
-.blank
-{
-  color: rgb(224, 224, 224);
-  background-color: rgb(224, 224, 224);
-}
-
-.start
-{
-  background-color: rgb(255, 128, 128);
-}
-
-.DL
-{
-  background-color: rgb(128, 128, 255);
-}
-
-.TL
-{
-  background-color: rgb(64, 64, 255);
-}
-
-.DW
-{
-  background-color: rgb(255, 128, 128);
-}
-
-.TW
-{
-  background-color: rgb(255, 64, 64);
-}
-
-.XX
-{
-  background-color: rgb(0, 0, 0);
-  border-color: black;
-}
-
 .letter
 {
   background-color: rgb(232, 148, 66);
-  //border-width: 1px;
-  border: solid 1px rgb(90, 60, 30);
+  border: 1px solid rgb(90, 60, 30);
   font-family: arial;
   font-size: 18pt;
   width: 40px;
@@ -121,6 +12,7 @@ td
   float: left;
   user-select: none;
   padding: 0;
+
 }
 
 .ui-draggable
@@ -143,46 +35,44 @@ td
 .letter-score
 {
   font-size: 10pt;
-  position: relative;
   left: 15px;
-  top: -25px;
   color: rgb(90, 60, 30);
 }
-
-#tray
+/*
+.tray
 {
-  //background-color: white;
-  border-style: solid;
-  border-color: rgb(128, 128, 128);
-  border-width: 2px;
+  background-color: white;
+  border: 2px solid gray;
   border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
   text-align: center;
-  width: 300px;
-  height: 40px;
-  float: left;
+  width: 80%;
+  height: 10%;
+  z-index: 1000;
+  margin-top: 72%;
+  margin-left: 10%;
+}
+*/
+#player-0-tray {
+border: 2px solid navy;
+border-radius: 5px;
+background-color: #ADADFF;
+margin-top: 1%;
+margin-left: 4%;
+margin-right: 0;
+width: 45%;
+height: 4em;
+display: inline-block;
+box-shadow: 15px 15px 15px 9px #0A0A0F;
 }
 
-#left-column
-{
-  float: left;
-}
-
-#right-column
-{
-  float: right;
-}
-#login-box
-{
-  background: rgb(80, 100, 200);
-}
-#game-lobby
-{
-  background: rgb(100, 200, 100);
-}
-.game-listing
-{
-  background: rgb(150, 200, 150);
-  border: 1px solid black;
+#player-1-tray {
+border: 2px solid navy;
+border-radius: 5px;
+background-color: #ADADFF;
+margin-top: 1%;
+margin-right: 0;
+width: 45%;
+height: 4em;
+display: inline-block;
+box-shadow: 15px 15px 15px 9px #0A0A0F;
 }
