resolved css html conflicts

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -1,10 +1,11 @@
-#board {
+#board {  /*eric*/
   background-color: none;
   border: 6px solid #33334C;
   width: 700px;
-  height: 455px;
+  height: 400px;  /*455px;*/
   overflow: scroll;
-    background-image:
+  z-index: 10;
+  background-image:
     radial-gradient(
       circle,
       #3385FF,
@@ -12,7 +13,9 @@
     );
 }
 
-button {
+/*button*/
+.blue-input
+{
    border-top: 1px solid #96d1f8;
    background: #65a9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
@@ -38,15 +41,17 @@ button {
    vertical-align: middle;
    margin-left: 4em;
    margin-top: 2em;
-   }
-.button:hover {
+}
+
+.blue-input:hover
+{
    border-top-color: #28597a;
    background: #28597a;
    color: #ccc;
-   }
-.button:active {
+}
+
+.blue-input:active
+{
    border-top-color: #1b435e;
    background: #1b435e;
-   }
-
-
+}
