refactor validation checks into new file

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -135,6 +135,7 @@ box-shadow: 15px 15px 15px 9px #0A0A0F;
   background-color: #fff;
   border: 1px solid #000;
   padding: 15px;
+  color: black;
   text-align: center;
 }
 
