--- a/app/styles/layout.css
+++ b/app/styles/layout.css
@@ -1,28 +1,27 @@
 
-#main
+/*#main
 {
-   background-image:
-    linear-gradient(#000033, #29293D);
-    color: white;
-    height: 43em;
-    display: flex; /* or inline-flex */
-    flex-direction: row | row-reverse | column | column-reverse;
-}
 
+    /*display: flex; /* or inline-flex */
+    /*flex-direction: row | row-reverse | column | column-reverse;
+}
+*/
 header
 {
   width: 88%;
-  height: 2.4em;
+  height: 22%;
   text-align: center;
-  font-size: 48px;
   margin-left:6%;
   margin-right: 0;
-  z-index: 400;
-  line-height: 2.7;
-  text-shadow: rgba(0,0,0,.4) 0 9px 0;
+
   background-image:
-    linear-gradient(#3333CC, #29293D);
-    box-shadow: 15px 15px 15px 9px #0A0A0F;
+  linear-gradient(#3333CC, #29293D);
+    border: 7px solid #3333CC;
+    -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   box-shadow: 10px 10px 10px 5px #0A0A0F;
 }
 
 #left-column {
@@ -52,23 +51,24 @@ header
   width: 95%;
   height:480px;
   /*margin-top: 2em;*/
-  z-index: 10;
+
 }
 
 #tilebox
 {
   border: 2px solid white;
-  color: black;
-  width: 75%;
-  padding: 10px;
-  /*height: 10em;*/
-  z-index: 400;
-  /*text-align: center;*/
-  margin-left: 10%;
+  width: 55%;
+  padding: 0 10px  40px 10px;
+  height: 11em;
+
+  margin-left: 20%;
   background-color: #ADADFF;
-  box-shadow: 15px 15px 15px 9px black;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
   line-height: 1.5;
   margin-bottom: .5em;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
 }
 
 #score
@@ -82,8 +82,10 @@ header
   margin-bottom: 7.5%;
   line-height: 1.5;
   background-color: #ADADFF;
-  box-shadow: 15px 15px 15px 9px #0A0A0F;
   line-height: 1.5;
+    -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
 }
 
 #board-type {
