--- a/app/styles/module.css
+++ b/app/styles/module.css
@@ -4,13 +4,17 @@
   height: auto;  /*4em;*/
   float: right;
   display: none;
-  box-shadow: 15px 15px 15px 9px #0A0A0F;
+
   padding: 1em;
     margin-right: 30%;
     margin-top: 4%%;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+           -moz-box-shadow:    inset 0 0 10px #000000;
+   -webkit-box-shadow: inset 0 0 10px #000000;
+   box-shadow:         inset 0 0 10px #000000;
+   border: 3px solid white;
 }
 
 ul {
@@ -23,3 +27,5 @@ li {
   float: right;
   margin-right: 10px;
 }
+
+
