--- a/app/styles/typography.css
+++ b/app/styles/typography.css
@@ -1,3 +1,69 @@
+
+header {
+  line-height: 1.8;
+}
+
 h1 {
-  font-size: 28px;
+  font-size: 3em;
+}
+
+.reflected {
+    position: relative;
+}
+.reflected:before, .reflected:after {
+    display: block;
+    position: absolute;
+    bottom: -.8em; /* You should change this value to fit your font */
+    left: 0;
+    right: 0;
+}
+.reflected:before {
+    content: 'Word Wars!';
+    opacity: .1;
+    /* This is how the text is flipped vertically */
+    -webkit-transform: scaleY(-1);
+    -moz-transform: scaleY(-1);
+    -o-transform: scaleY(-1);
+}
+.reflected:after {
+    /* Fading using CSS gradient */
+    /* Don't forget to change the colors to your background color */
+
+    linear-gradient(#000033, #29293D);
+/*
+    background: -webkit-gradient(linear, left top, left center, from(rgba(255,255,255,0)), to(rgb(255,255,255)));
+    background: -moz-linear-gradient(top, rgba(255,255,255,0), rgb(255,255,255));
+     I left out the `filter` property,
+       because IE doesn't know `:before` and `:after` pseudo-elements anyway */
+    content: ' ';
+    height: 1em;
+}
+
+h2 {}
+
+h3 {
+  font-size: 1.3em;
+  margin-top: 0;
+}
+p {
+  font-size: 1.3em;
+}
+
+strong {
+  font-size:
+}
+
+#tilebox {
+  text-align: center;
+  color: #000099;
+  font-size: 1.2;
+  font-family: Georgia, serif;
+}
+
+#score {
+  color: #000099;
+  font-size: 1.3em;
+  font-family: Georgia, serif;
+  text-align: center;
+
 }
