--- a/app/styles/module.css
+++ b/app/styles/module.css
@@ -19,13 +19,16 @@
 
 ul {
   float: left;
+  padding-right: 20px;
+  margin-left: 30px;
+
 }
 
 li {
   list-style: none;
   display: inline-block;
   float: right;
-  margin-right: 10px;
+  margin-left: -10px;
 }
 
 
