--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -12,10 +12,12 @@ body
 {
   line-height: 1;
   cursor: default;
-     background-image:
-    linear-gradient(#000033, #29293D);
-    color: white;
-    /*height: 50em;*/
+  cursor: -webkit-default;
+  cursor: -moz-default;
+   background-image:
+  linear-gradient(#000033, #29293D);
+  color: white;
+  /*height: 50em;*/
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -115,6 +117,7 @@ td
   z-index: 1000;
 }
 
+
 #overlay div
 {
   width: 300px;
@@ -124,6 +127,21 @@ td
   padding: 15px;
   color: black;
   text-align: center;
+}
+
+#spelled-word
+{
+  display: none;
+  width: 33.33%;
+  background-color: #fff;
+  border: 1px solid #000;
+  position:absolute;
+  padding: 15px;
+  color: black;
+  left: 33.33%;
+  top: 30%;
+  text-align: center;
+  z-index: 1000;
 }
 
 .letter-button
