--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -94,15 +94,8 @@ td
   border-radius: 5px;
   background-color: #ADADFF;
   text-align: center;
-  }
-
-#letter-select
-{
-  float: left;
-  margin: 0 7px 20px 0;
-  background-color: rgb(100, 255, 100);
-  z-index: 30;
 }
+
 
 #overlay
 {
@@ -112,36 +105,21 @@ td
   top: 0px;
   width:100%;
   height:100%;
-  text-align:center;
-  background-color: rgba(0,0,0,.25);
+  background-color: rgba(0,0,0,.5);
   z-index: 1000;
 }
 
-
-#overlay div
+.popup
 {
-  width: 300px;
-  margin: 100px auto;
-  background-color: #fff;
-  border: 1px solid #000;
-  padding: 15px;
-  color: black;
-  text-align: center;
-}
-
-#transition-dialogue
-{
-  display: none;
-  width: 33.33%;
-  background-color: #fff;
-  border: 1px solid #000;
-  position:absolute;
-  padding: 15px;
-  color: black;
+  width: 25em;
   left: 33.33%;
-  top: 30%;
-  text-align: center;
-  z-index: 1000;
+  margin: 12em auto;
+  background-color: #fff;
+  border: 1px solid #000;
+  text-align:center;
+  padding: 15px;
+  color: black;
+  font-size: 1.3em;
 }
 
 .letter-button
