speed-up page, run npm install first

--- a/app/styles/signin.css
+++ b/app/styles/signin.css
@@ -33,7 +33,7 @@ border: 2px solid green;
 
 #login-box
 {
-  background: rgb(80, 100, 200);
+  /*background: rgb(80, 100, 200);*/
 }
 #game-lobby
 {
