--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -16,35 +16,40 @@
 /*button*/
 .blue-input
 {
-   border-top: 1px solid #96d1f8;
-   background: #65a9d7;
-   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
-   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
-   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
-   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
-   background: -o-linear-gradient(top, #3e779d, #65a9d7);
-   padding: 5px 4px  5px 4px;
-   -webkit-border-radius: 8px;
-   -moz-border-radius: 8px;
-   border-radius: 8px;
-   /*
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   */
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   box-shadow: 15px 15px 15px 9px #0A0A0F;
-   color: #000099;
-   font-size: 18px;
-   font-family: Georgia, serif;
-   text-decoration: none;
-   vertical-align: middle;
-   margin-left: 2em;
-   margin-top: .2em;
-
+  border-top: 1px solid #96d1f8;
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+  background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+  background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+  background: -o-linear-gradient(top, #3e779d, #65a9d7);
+  padding: 5px 4px  5px 4px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  /*
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  */
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  box-shadow: 5px 5px 5px 2px #0A0A0F;
+  color: #000099;
+  font-size: 18px;
+  font-family: Georgia, serif;
+  text-decoration: none;
+  text-align: center;
+  vertical-align: middle;
+  margin-left: 2em;
+  margin-top: .2em;
+  width: 7em;
+  height: 1.7em;
+    -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.blue-input:hover
+.blue-input:not(#whose-turn):hover
 {
    border-top-color: #28597a;
    background: #28597a;
@@ -56,67 +61,3 @@
    border-top-color: #1b435e;
    background: #1b435e;
 }
-
-#whose-turn {
-
-    width: 7em;
-    margin-left:0;
-    margin-top: 2.5%;
-    text-align: center;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-   background: #65a9d7;
-   -webkit-border-radius: 8px;
-   -moz-border-radius: 8px;
-   border-radius: 8px;
-   height: 1.7em;
-   padding-top: 7px;
-   padding-bottom: 0;
-  vertical-align: middle;
-  border-top: 1px solid #96d1f8;
-  box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   box-shadow: 10px 10px 10px 9px #0A0A0F;
-   color: #000099;
-   font-size: 19px;
-   font-family: Georgia, serif;
-   text-decoration: none;
-      background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
-   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
-   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
-   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
-   background: -o-linear-gradient(top, #3e779d, #65a9d7);
-}
-
-
-#new-game-button {
-   border-top: 1px solid #96d1f8;
-   background: #65a9d7;
-   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
-   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
-   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
-   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
-   background: -o-linear-gradient(top, #3e779d, #65a9d7);
-   padding: 5px 4px  5px 4px;
-   -webkit-border-radius: 8px;
-   -moz-border-radius: 8px;
-   border-radius: 8px;
-   /*
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   */
-
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   box-shadow: 10px 10px 10px 5px #0A0A0F;
-   color: #000099;
-   font-size: 18px;
-   font-family: Georgia, serif;
-   text-decoration: none;
-   vertical-align: middle;
-   margin-right: 9%;
-   margin-top: .2em;
-   text-align: center;
-
-}
-
