--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -4,9 +4,6 @@ table
   border-spacing: 0;
 }
 
-#game {
-}
-
 body
 {
   line-height: 1;
@@ -21,6 +18,12 @@ body
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+}
+
+p
+{
+  font-size: .8em;
+  margin: .5em;
 }
 
 td
@@ -118,4 +121,17 @@ td
 .game-button
 {
   display: none;
+}
+#fb-share-button
+{
+}
+select
+{
+  line-height: 1em;
+  font-size: .7em;
+  width: 13em;
+}
+#login-button
+{
+  font-size: .7em;
 }
