--- a/app/styles/signin.css
+++ b/app/styles/signin.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   background-image:
     linear-gradient(#000033, #29293D);
 }
@@ -34,7 +34,7 @@ border: 7px solid #3333cc;
 #login-box
 {
   /*background: rgb(80, 100, 200);*/
-}
+/*}
 #game-lobby
 {
   background: rgb(100, 200, 100);
