--- a/app/styles/tray.css
+++ b/app/styles/tray.css
@@ -5,8 +5,6 @@
   float: right;
   padding: 1em;
   display: none;
-  margin-right: 30%;
-  margin-top: 2%;
   -moz-box-sizing:    border-box;
   -webkit-box-sizing: border-box;
   box-sizing:         border-box;
@@ -19,6 +17,18 @@
   text-align: center;
 }
 
+#tray-container
+{
+  display: inline-block;
+  margin-left: 25%;
+  margin-top: 4%;
+}
+#return-letters-button
+{
+  margin-top: -4em;
+  height: 3em;
+  width: 3em;
+}
 ul
 {
   float: left;
